codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_in_progress.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2785
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Queued follow-up inputs
  ↳ Preparing images: describe
    shift+← edit last queued message

› x

  GPT-5.6-Sol default · /tmp/project
