codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 126
expression: popup
---
  Implement this plan?


  1. Yes, implement this plan          Switch to Default and start coding.
› 2. Yes, clear context and implement  Fresh thread with this plan
  3. No, stay in Plan mode             Continue planning with the model.

  enter select · esc back
