codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__repo_ci_fix_worker_milestone_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Repo CI fix workers applied 2 grouped fix(es) touching 2 file(s): updated
  config | adjusted tests
