codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__repo_ci_terminal_status_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 317
expression: rendered
---
• Repo CI remote checks passed.
