codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_action_picker.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Choose a review action

› 1. Report findings        Show the review in this conversation.
  2. Fix findings           Revalidate and fix every valid finding.
  3. Fix findings + commit  Fix, verify, and create one focused commit.

  Press enter to confirm or esc to go back
