codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_action_picker_report_only.snap
---
source: tui/src/chatwidget/tests/review_flow.rs
expression: rendered
---
  Choose a review action

› 1. Report findings  Show the review in this conversation.

  Press enter to confirm or esc to go back
